src/style.css
@import "./css/variables.css";
@import "./css/fonts.css";
@import "./css/animation.css";

:root {
    font: var(--fw-regular) 22px/1.5625 "Outfit", Helvetica, Arial, sans-serif;
    background: var(--main-bg-color);
    color: var(--main-text-color-80);

    font-synthesis: none;
    text-rendering: optimizeLegibility;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
}

body {
    margin: 0;
    display: flex;
    place-items: center;
    min-width: 320px;
    min-height: 100vh;
    -webkit-font-smoothing: antialiased;
    text-decoration-skip-ink: none;
}

a {
    color: var(--main-text-color);
    text-decoration: underline;
}

a:hover {
    text-decoration: none;
}

h1,
h2 {
    font-family: "RocaThin", Helvetica, Arial, sans-serif;
    margin: 0 0 20px;
    color: var(--main-text-color);
    font-weight: 400;
}

h1 {
    font-size: 60px;
}

h2 {
    font-size: 40px;
}

mark {
    all: unset;
    background: none;
    color: var(--orange-text-color);
}

.btn {
    border-radius: 0;
    border: 0;
    font-size: 24px;
    line-height: 1;
    padding: 5px 10px;
    min-height: 64px;
    min-width: 256px;
    display: flex;
    color: var(--off-white-text-color);
    justify-content: center;
    align-items: center;
    font-weight: var(--fw-light);
    font-family: inherit;
    background: var(--main-text-color);
    cursor: pointer;
    transition: all 0.4s ease-in-out;
    text-decoration: none;
}

.btn:hover {
    background: var(--orange-text-color);
}

.btn:focus,
.btn:focus-visible {
    outline: 4px auto -webkit-focus-ring-color;
}

.link {
    text-decoration: none;
    transition: all 0.4s ease-in-out;
    position: relative;
    color: var(--main-text-color);
}

.link:before,
.link:after {
    height: 2px;
    bottom: -1px;
    left: 0;
    width: 100%;
    transition: all 0.2s ease-in-out;
    position: absolute;
    content: "";
    background: var(--main-text-color);
    transform: scaleX(1);
    transform-origin: bottom right;
}

.link:after {
    transition-delay: 0.2s;
    transform: scaleX(0);
    transform-origin: bottom left;
    background: var(--orange-text-color);
}

.link:hover,
.link:focus,
.link:focus-visible {
    color: var(--orange-text-color);
}

.link:hover:before {
    transform: scaleX(0);
}

.link:hover:after {
    transform: scaleX(1);
}

p {
    margin: 0;
}

strong {
    font-weight: var(--fw-bold);
}

ul {
    margin: 0;
    padding: 0;
    list-style: none;
}

#app {
    overflow: hidden;
    position: relative;
    width: 100%;
    display: flex;
    min-height: 100vh;
    flex-direction: column;
}

.container {
    width: 100%;
    max-width: 1728px;
    margin: 0 auto;
    padding: 0 20px;
    box-sizing: border-box;
}

/* header */
.header {
    padding: 40px 0;
    line-height: 1;
}

.header h1 {
    display: inline;
    line-height: inherit;
    margin: 0;
    font-size: 0;
}

.header a {
    text-decoration: none;
}

/*footer*/
.footer {
    font-size: 16px;
    overflow: hidden;
    padding: 40px 0;
}

.footer p {
    margin: 0;
}

.footer address {
    display: inline;
    font-style: normal;
}

/*introduction*/
.introduction .container {
    display: flex;
    gap: 60px;
    flex-direction: column;
}

.introduction__list {
    display: flex;
    gap: 20px 13%;
    flex-wrap: wrap;
    margin-top: 20px;
}

.introduction__links {
    display: flex;
    flex-wrap: wrap;
    gap: 20px 40px;
    align-items: center;
    color: var(--main-text-color);
}

/*custom-bg*/
.custom-bg {
    pointer-events: none;
    display: none;
    position: absolute;
    z-index: -1;
}

.custom-bg svg {
    max-width: 100%;
    height: auto;
}

/*media*/
@media (min-width: 1024px) {
    :root {
        font-size: 30px;
    }

    h1 {
        font-size: 84px;
    }

    h2 {
        font-size: 64px;
    }

    .container {
        padding: 0 71px;
    }

    .btn,
    a,
    body {
        cursor: none;
    }

    .introduction__text {
        max-width: 1220px;
        width: 80%;
    }

    .custom-bg {
        z-index: 0;
        top: 0;
        right: 0;
        display: block;
    }
}

